--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -4,9 +4,10 @@ section(class="canvas front" id="front")
 
         h2 Bob & Shirley Says:
         p(style="text-align: center;") stay 6 feet apart, stay peaceful, stay safe <br><br> Look at Sybrina Fulton (Trayvon Martin's Mother) who is trying to turn injustice and tradegy into change by running for Miami-Dade County Commissioner <a href="https://sybrinafulton.com/">here</a>
+
         h5(style="text-align: center; margin-top: 0em;") Wendell Harrison & Phillip Ranelin: Message From The Tribe <br>[[ Saturday June 6, 12:00pm EST ]]
         p <a href="https://zoom.us/j/93836508434" target="_blank" class="myButton"> Zoom Video Stream </a>
         div unmute twitch for audio stream below:
-        <iframe src="https://player.twitch.tv/?channel=Bob_shirley" frameborder="0" allowfullscreen="true" scrolling="no" width="300"></iframe><a href="https://www.twitch.tv/Bob_shirley?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;"></a>
+        <iframe src="https://player.twitch.tv/?channel=Bob_shirley&parent=bobshirley.xyz" frameborder="0" allowfullscreen="true" scrolling="no" width="300"></iframe><a href="https://www.twitch.tv/Bob_shirley?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;"></a>
         <img src="/assets/images/global/_link/fernelly-6-1.jpg" width="300">
         a(href="mailto:bobshirleysays@gmail.com") bobshirleysays@gmail.com
